--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -60,10 +60,10 @@
         <!--</dependency>-->
 
         <!--实现配置中心的依赖-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-starter-config</artifactId>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.springframework.retry</groupId>
