--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -24,7 +24,7 @@ eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
 #数据库连接配置
 #mysql
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/admin?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false&verifyServerCertificate=false&autoReconnct=true&autoReconnectForPools=true&allowMultiQueries=true&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/admin?useAffectedRows=true&serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false&verifyServerCertificate=false&autoReconnct=true&autoReconnectForPools=true&allowMultiQueries=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
