added adminUser Avatar

--- a/admin/src/main/resources/bootstrap.properties
+++ b/admin/src/main/resources/bootstrap.properties
@@ -26,3 +26,10 @@ mybatis.config-location=classpath:mybatis-config.xml
 
 #zipkin
 spring.zipkin.base-url=http://192.168.12.110:9411
+
+#FTP
+ftp.host=192.168.12.110
+ftp.port=21
+ftp.username=img
+ftp.password=healthy
+ftp.basepath=/home/img/images
