add insert service img

--- a/health-admin/src/main/resources/bootstrap.properties
+++ b/health-admin/src/main/resources/bootstrap.properties
@@ -28,3 +28,12 @@ ftp.port=21
 ftp.username=img
 ftp.password=healthy
 ftp.basepath=/home/img/images
+#monitor
+spring.boot.admin.auto-registration = true
+spring.boot.admin.url = http://192.168.12.108:1239
+spring.boot.admin.api-path = instances
+info.provider.name=zhang tianhao
+info.provider.email=zth@zju.edu.cn
+info.provider.telephone=17816032797
+info.provider.organization=ZheJiang University
+info.service.description=Admin Management in health-platform
