--- a/health-servicecategory/src/main/resources/bootstrap.properties
+++ b/health-servicecategory/src/main/resources/bootstrap.properties
@@ -23,3 +23,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.config-location=classpath:mybatis-config.xml
 #zipkin
 spring.zipkin.base-url=http://192.168.12.110:9411
+
+spring.boot.admin.auto-registration = true
+spring.boot.admin.url = http://192.168.12.108:1239
+spring.boot.admin.api-path = instances
+info.provider.name=zhang tianhao
+info.provider.email=zth@zju.edu.cn
+info.provider.telephone=17816032797
+info.provider.organization=ZheJiang University
+info.service.description=Service Category Management in health-platform
