--- a/health-admin/pom.xml
+++ b/health-admin/pom.xml
@@ -59,6 +59,14 @@
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
 
+        <!--Spring-boot-admin-->
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+
+
         <!--配置中心的依赖-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -161,7 +169,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <repository>5.16/admin</repository>
+                    <repository>5.25/admin</repository>
                     <buildArgs>
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
