--- a/health-api/pom.xml
+++ b/health-api/pom.xml
@@ -112,6 +112,13 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
         </dependency>
+
+        <!--Spring-boot-admin-->
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>1.5.6</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -134,7 +141,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <repository>4.25/api</repository>
+                    <repository>5.25/api</repository>
                     <buildArgs>
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
