--- a/health-servicecategory/pom.xml
+++ b/health-servicecategory/pom.xml
@@ -32,6 +32,13 @@
     </dependencyManagement>
 
     <dependencies>
+        <!--Spring-boot-admin-->
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -134,7 +141,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <repository>4-24/service-category</repository>
+                    <repository>5.25/service-category</repository>
                     <buildArgs>
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
