--- a/health-common/pom.xml
+++ b/health-common/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>health-common</artifactId>
-
+    <packaging>pom</packaging>
+    <modules>
+        <module>health-common-utils</module>
+    </modules>
 
 </project>
